rnsc/test_data/integration/error/parser/type_hints/long/float.rns
.class @long 3.14
.super java/lang/Object
